objects/TW1_Analise_Bancaria__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Agencia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agência</label>
        <referenceTo>TW1_Agencia__c</referenceTo>
        <relationshipLabel>Análises Bancárias</relationshipLabel>
        <relationshipName>Analises_Bancarias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Avaliacao__c</fullName>
        <label>Avaliação</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Banco__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banco</label>
        <referenceTo>TW1_Banco__c</referenceTo>
        <relationshipLabel>Análises Bancárias</relationshipLabel>
        <relationshipName>Analises_Bancarias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Caso__c</fullName>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Análises Bancárias</relationshipLabel>
        <relationshipName>Analises_Bancarias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Data_do_Envio__c</fullName>
        <label>Data do Envio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Prazo_meses__c</fullName>
        <label>Prazo (meses)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Selecionada__c</fullName>
        <label>Selecionada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Em análise</fullName>
                    <default>true</default>
                    <label>Em análise</label>
                </value>
                <value>
                    <fullName>Em Exigência</fullName>
                </value>
                <value>
                    <fullName>Aprovado</fullName>
                </value>
                <value>
                    <fullName>Reprovado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Valor_Avaliacao_Banco__c</fullName>
        <label>Valor de Avaliação do Banco</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_FGTS__c</fullName>
        <label>Valor FGTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Financiamento__c</fullName>
        <label>Valor Financiamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Subsidio__c</fullName>
        <label>Valor Subsídio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Análise Bancária</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>AB# {YYYY}{MM}-{0000}</displayFormat>
        <label>Nome da Análise Bancária</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análises Bancárias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidarAprovacao</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(TW1_Selecionada__c),
ISPICKVAL(TW1_Selecionada__c, &quot;Sim&quot;),
NOT(ISPICKVAL(TW1_Status__c, &quot;Aprovado&quot;))
   )</errorConditionFormula>
        <errorDisplayField>TW1_Selecionada__c</errorDisplayField>
        <errorMessage>Somente selecionar a Análise Bancária após a aprovação da mesma.</errorMessage>
    </validationRules>
</CustomObject>